[package]
name = "bsd-kvm-sys"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/bsd-kvm-sys"
keywords = ["bsd", "ffi"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "BSD Kernel Data Access Library (libkvm) binding"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.65.1"

[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
